Second Commit - add average rating on points + tidy up

--- a/app/views/details.hbs
+++ b/app/views/details.hbs
@@ -6,9 +6,11 @@
     <h3>{{points.name}}</h3>
     <div>{{points.description}}</div>
 
+
     <p></p>
     <p><strong> latitude: </strong> {{points.coordinates.lat}}</p>
     <p><strong> longitude: </strong>  {{points.coordinates.long}}</p>
+    <p><strong> rating: </strong>  {{rating}}</p>
 
     <section class="ui segment">
 
