--- a/app/views/main.hbs
+++ b/app/views/main.hbs
@@ -2,11 +2,12 @@
 
 <section class="ui stacked segment">
     <div class="ui grid">
-        <img src="images/blasket_islands.jpg" class="ui large image">
 
         <article class="ten wide column">
             <header class="ui  header"> Points of Interest</header>
             <p> The isles of Ireland </p>
         </article>
+
+        <img src="images/ireland1.jpg" class="ui image">
     </div>
 </section>
