--- a/app/views/signup.hbs
+++ b/app/views/signup.hbs
@@ -2,7 +2,7 @@
 
 <section class="ui raised segment">
     <div class="ui grid">
-        <div class="ui ten wide column">
+        <div class="ui sixteen wide column">
             <div class="ui stacked fluid form segment">
                 <form action="/signup" method="POST">
                     <h3 class="ui header">Register</h3>
