ready to publish

--- a/app/views/partials/delete_image.hbs
+++ b/app/views/partials/delete_image.hbs
@@ -2,7 +2,7 @@
     <div class="ui segment">
         <div class= "column">
             {{#each points.image}}
-                <div class="ui small card">
+                <div class="ui fluid card">
                     <div class="image">
                         <img src="{{url}}">
                     </div>
